[package]
name = "touch_switch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rp2040-boot2 = "0.2"
rp2040-hal = { version="0.9", features=["rt", "critical-section-impl"] }
panic-halt = "0.2"
panic-probe = { version = "0.3", features = ["print-defmt"] }
# cortex-m = "0.7"
cortex-m-rt = "0.7"
pio-proc = "0.2"
pio = "0.2"
defmt = "0.3"
defmt-rtt = "0.4"
embedded-hal = { version = "0.2.5", features = ["unproven"] }
fugit = "0.3.7"
apa102-spi = "0.3.2"
smart-leds = "0.3.0"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 0
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
